--- a/IoraWallPaper/Supporting/GoogleService-Info.plist
+++ b/IoraWallPaper/Supporting/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>326612778806-j66l922orpckqg3s9njtvj5dkdssoevq.apps.googleusercontent.com</string>
+	<string>326612778806-nqojgr0im7h3ks040eu85sje0outcgl3.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.326612778806-j66l922orpckqg3s9njtvj5dkdssoevq</string>
+	<string>com.googleusercontent.apps.326612778806-nqojgr0im7h3ks040eu85sje0outcgl3</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDWtePcWX2i4IuTXVysh884fwL9ebZzkuw</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,23 +13,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.IoraWallPaper</string>
+	<string>com.wargi.IoraWallPaper</string>
 	<key>PROJECT_ID</key>
 	<string>iora-wallpaper</string>
 	<key>STORAGE_BUCKET</key>
 	<string>iora-wallpaper.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<true/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:326612778806:ios:4b99b883c2379f56c5fd97</string>
+	<string>1:326612778806:ios:c81dad45eff9a91bc5fd97</string>
 	<key>DATABASE_URL</key>
 	<string>https://iora-wallpaper.firebaseio.com</string>
 </dict>
