--- a/IoraWallPaper.xcodeproj/xcshareddata/xcschemes/IoraWallPaper.xcscheme
+++ b/IoraWallPaper.xcodeproj/xcshareddata/xcschemes/IoraWallPaper.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8E88802E248DF71300E7E620"
-               BuildableName = "iORA.app"
+               BuildableName = "IORA.app"
                BlueprintName = "IoraWallPaper"
                ReferencedContainer = "container:IoraWallPaper.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8E88802E248DF71300E7E620"
-            BuildableName = "iORA.app"
+            BuildableName = "IORA.app"
             BlueprintName = "IoraWallPaper"
             ReferencedContainer = "container:IoraWallPaper.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8E88802E248DF71300E7E620"
-            BuildableName = "iORA.app"
+            BuildableName = "IORA.app"
             BlueprintName = "IoraWallPaper"
             ReferencedContainer = "container:IoraWallPaper.xcodeproj">
          </BuildableReference>
