--- a/IoraWallPaper/Info.plist
+++ b/IoraWallPaper/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Privacy - Tracking Usage Description</key>
+	<string>This identifier will be used to deliver personalized ads to you.</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-4824477530561217~8046530963</string>
 	<key>CFBundleDevelopmentRegion</key>
